many changes chapter 4 finished? added some screenshots etc.

--- a/images/Makefile
+++ b/images/Makefile
@@ -1,5 +1,7 @@
 all:: richards_0.png richards_i_v8.png richards_i_mozjs17.png richards_f.png
 all:: deltablue_0.png deltablue_i_v8.png deltablue_i_mozjs17.png deltablue_f.png
+all:: havlak_0.png havlak_i_v8.png havlak_i_mozjs17.png havlak_f.png havlak_ff.png
+all:: prop_constructing_test.png prop_access_test.png
 
 PLOTER=histogram.plt
 COUNT=6
@@ -12,8 +14,9 @@ CROP_f=45
 
 plot_ = gnuplot -e "fileName='$1'; histCount=$2; xMax=$3; maxDel=$4; countDel=$5; s='$7'" ${PLOTER}; convert -rotate 90 -crop 700x500+$6+0 $1.png $1.png ;
 
-plot = $(call plot_,$1,$2,$3,$4,$5,$6,"мкс")
-plot_ms = $(call plot_,$1,$2,$3,$4,$5,$6,"мс")
+plot = $(call plot_,$1,$2,$3,$4,$5,$6,Время работы (мкс))
+plot_ms = $(call plot_,$1,$2,$3,$4,$5,$6,Время работы (мс))
+plot_ops = $(call plot_,$1,$2,$3,$4,$5,$6,Количество операций в секунду)
 
 # gnuplot -e "fileName='richards_0'; histCount=" ${PLOTER}
 # convert -rotate 90 richards_0.png richards_0.png
@@ -42,6 +45,30 @@ deltablue_i_mozjs17.png: deltablue_i_mozjs17.dat
 
 deltablue_f.png: deltablue_f.dat
 	$(call plot,"$(basename $@)", ${COUNT_W_OPT}, 80000, 70000, ${DELIM_COUNT},${CROP_f})
+
+
+havlak_0.png: havlak_0.dat
+	$(call plot_ms,"$(basename $@)", ${COUNT}, 105000, 100000, ${DELIM_COUNT},${CROP_0})
+
+havlak_i_v8.png: havlak_i_v8.dat
+	$(call plot_ms,"$(basename $@)", 4, 105000, 100000, ${DELIM_COUNT},${CROP_i})
+
+havlak_i_mozjs17.png: havlak_i_mozjs17.dat
+	$(call plot_ms,"$(basename $@)", 4, 105000, 100000, ${DELIM_COUNT},${CROP_i})
+
+havlak_f.png: havlak_f.dat
+	$(call plot_ms,"$(basename $@)", ${COUNT_W_OPT}, 105000, 100000, ${DELIM_COUNT},${CROP_f})
+
+havlak_ff.png: havlak_ff.dat
+	$(call plot_ms,"$(basename $@)", ${COUNT_W_OPT}, 105000, 100000, ${DELIM_COUNT},${CROP_f})
+
+
+
+prop_constructing_test.png: prop_constructing_test.dat
+	$(call plot_ops,"$(basename $@)", 2, 45000000, 40000000, ${DELIM_COUNT},90)
+
+prop_access_test.png: Makefile prop_access_test.dat
+	$(call plot_ops,"$(basename $@)", 2, 220000000, 200000000, ${DELIM_COUNT},90)
 
 clean:
 	rm *.png
